--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 					<div id="content" class="8u skel-cell-important">
 						<section>
 							<header>
-								<h2>Welcome to Iridium!</h2>
+								<h2>How well do you know Ferdinand Marcos?</h2>
 								<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
 							</header>
-							<a href="#" class="image full"><img src="images/pic07.jpg" alt="" /></a>
-							<p>This is <strong>Iridium</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
-							<p>Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor. Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget lorem ipsum dolor.</p>
+							<a href="marcos.html" class="image full"><img src="images/pic07.jpg" alt="" /></a>
+							<p><strong>Ferdinand Edralin Marcos</strong>, most commonly known as Ferdinand Marcos was a Philippine lawyer and politician, who as head of state from 1966 to 1986, initiated an autocratic administration in the Philippines that garnered loads of opprobrium for payola and for its repression of egalitarian procedures. </p>
+							<p>On September 11, 1917, Ferdinand Edralin Marcos was born in Sarrat - a village in the Northern Ilocos region of the island of Luzon in the Philippines. His parents, both teachers from notable families were Josefa Edralin and Mariano Marcos. Marcos was exposed to the political atmosphere at a young age when his father, Mariano Marcos decided to become a congressman in 1925. Not only did Mariano and Josefa coerce Ferdinand to excel in his studies at school, they also wanted him to be preeminent in activities such as wrestling, boxing, hunting, survival skills and marksmanship.</p>
 						</section>
 					</div>
 					
@@ -67,18 +67,18 @@
 					<div id="sidebar" class="4u">
 						<section>
 							<header>
-								<h2>Pellentesque vulputate</h2>
+								<h2>Facts You May Not Know</h2>
 							</header>
 							<ul class="style">
 								<li>
-									<p class="posted">August 11, 2002  |  (10 )  Comments</p>
+									<p class="posted"><a href="marcos.html">Ferdinand E. Marcos</a></p>
 									<img src="images/pic04.jpg" alt="" />
-									<p class="text">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</p>
+									<p class="text"><a href="marcos.html">Marcos was also undeniably smart that he was able to top the 1939 Bar Examinations with near-perfect score regardless  of the fact that he was imprisoned for shooting and killing Julio Nalundasan - a political rival of his father.</a></p>
 								</li>
 								<li>
-									<p class="posted">August 11, 2002  |  (10 )  Comments</p>
+									<p class="posted"><a href="martiallaw.html">Martial Law</a></p>
 									<img src="images/pic05.jpg" alt="" />
-									<p class="text">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</p>
+									<p class="text">On September 21, 1972, the Philippines was proclaimed under the state of Martial Law by former President Ferdinand E. Marcos.</p>
 								</li>
 								<li>
 									<p class="posted">August 11, 2002  |  (10 )  Comments</p>
