--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					<div id="content" class="8u skel-cell-important">
 						<section>
 							<header>
-								<h2>How well do you know Ferdinand Marcos?</h2>
-								<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+								<h2> How well do you know Ferdinand Marcos?</h2>
+								
 							</header>
 							<a href="marcos.html" class="image full"><img src="images/pic07.jpg" alt="" /></a>
 							<p><strong>Ferdinand Edralin Marcos</strong>, most commonly known as Ferdinand Marcos was a Philippine lawyer and politician, who as head of state from 1966 to 1986, initiated an autocratic administration in the Philippines that garnered loads of opprobrium for payola and for its repression of egalitarian procedures. </p>
@@ -72,18 +72,18 @@
 							<ul class="style">
 								<li>
 									<p class="posted"><a href="marcos.html">Ferdinand E. Marcos</a></p>
-									<img src="images/pic04.jpg" alt="" />
-									<p class="text"><a href="marcos.html">Marcos was also undeniably smart that he was able to top the 1939 Bar Examinations with near-perfect score regardless  of the fact that he was imprisoned for shooting and killing Julio Nalundasan - a political rival of his father.</a></p>
+									<a href="marcos.html"><img src="images/pic04.jpg" alt="" /></a>
+									<p class="text">Marcos was also undeniably smart that he was able to top the 1939 Bar Examinations with near-perfect score </p>
 								</li>
 								<li>
 									<p class="posted"><a href="martiallaw.html">Martial Law</a></p>
-									<img src="images/pic05.jpg" alt="" />
-									<p class="text">On September 21, 1972, the Philippines was proclaimed under the state of Martial Law by former President Ferdinand E. Marcos.</p>
+									<a href="martiallaw.html"><img src="images/pic05.jpg" alt="" /></a>
+									<p class="text">On September 21, 1972, the Philippines was proclaimed under the state of Martial Law by former Pres. Ferdinand E. Marcos.</p>
 								</li>
 								<li>
-									<p class="posted">August 11, 2002  |  (10 )  Comments</p>
-									<img src="images/pic06.jpg" alt="" />
-									<p class="text">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</p>
+									<p class="posted"><a href="aftermath.html"> Aftermath </a></p>
+									<a href="aftermath.html"><img src="images/pic06.jpg" alt="" /></a>
+									<p class="text">Police forces gained more privilege to exercise their position as security personnel and became more powerful. </p>
 								</li>
 							</ul>
 						</section>
@@ -97,76 +97,32 @@
 			<div class="container">
 				<div class="row">
 					<div class="4u">
-						<h2>Aenean elementum facilisis</h2>
-						<a href="#" class="image full"><img src="images/pic01.jpg" alt="" /></a>
-						<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum. Pellentesque viverra vulputate enim.</p>
-						<p><a href="#" class="button">More Details</a></p>
+						<h2>What Philippines was like after Martial Law?</h2>
+						<a href="aftermath.html" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+						<p>Approach any old Filipino citizen and interrogate him about Marcos regime. He probably may talk about the atrocities brought about by Marcos's reign, with all the abuses and deaths that dominated during his time. </p>
+						<p><a href="aftermath.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
-						<h2>Fusce ultrices fringilla</h2>
-						<a href="#" class="image full"><img src="images/pic02.jpg" alt="" /></a>
+						<h2>Ferdinand Marcos: Youth and Family</h2>
+						<a href="marcos.html" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 						<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum. Pellentesque viverra vulputate enim.</p>
-						<p><a href="#" class="button">More Details</a></p>
+						<p><a href="marcos.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
-						<h2>Etiam rhoncus volutpat erat</h2>
-						<a href="#" class="image full"><img src="images/pic03.jpg" alt="" /></a>
-						<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum. Pellentesque viverra vulputate enim.</p>
-						<p><a href="#" class="button">More Details</a></p>
+						<h2>Why did Martial Law happen?</h2>
+						<a href="martiallaw.html" class="image full"><img src="images/pic03.jpg" alt="" /></a>
+						<p>Generally, according to the Philippine History Organization,  it was mainly to establish the country towards what they call a 'New Society'. The purpose of it is not to make military power overtook the people's rights but to protect the national government and the people governed by it against communism.</p>
+						<p><a href="martiallaw.html" class="button">More Details</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
-
-
-		<!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<div class="row">
-					<div class="4u">
-						<section>
-							<h2>Latest Posts</h2>
-							<ul class="default">
-								<li><a href="#">Pellentesque lectus gravida blandit</a></li>
-								<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
-								<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-								<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-								<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="4u">
-						<section>
-							<h2>Ultrices fringilla</h2>
-							<ul class="default">
-								<li><a href="#">Pellentesque lectus gravida blandit</a></li>
-								<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
-								<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-								<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-								<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
-							</ul>
-						</section>
-					</div>
-					<div class="4u">
-						<section>
-							<h2>Aenean elementum</h2>
-							<ul class="default">
-								<li><a href="#">Pellentesque lectus gravida blandit</a></li>
-								<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
-								<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-								<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-								<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
-							</ul>
-						</section>
-					</div>
-				</div>
-			</div>
-		</div>
+		
 
 		<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				Copyright &copy; 2017. Charcoal and the Seven Dwarves. All Rights Reserved.
 			</div>
 		</div>
 		
