--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class="4u">
 						<h2>Ferdinand Marcos: Youth and Family</h2>
 						<a href="marcos.html" class="image full"><img src="images/pic02.jpg" alt="" /></a>
-						<p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum. Quisque dictum. Pellentesque viverra vulputate enim.</p>
+						<p>Although a substantial influence on Marcos’s life, Mariano was not his biological father. His actual father was a wealthy Chinese man named Ferdinand Chua whom he claims as his “godfather”. Chua was a man of numerous connections. </p>
 						<p><a href="marcos.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
