--- a/marcos.html
+++ b/marcos.html
@@ -35,8 +35,8 @@
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="marcos.html">Ferdinand E. Marcos</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li class="active"><a href="marcos.html">Ferdinand E. Marcos</a></li>
 						<li><a href="martiallaw.html">Martial Law</a></li>
 						<li><a href="aftermath.html">Aftermath</a></li>
 						<li><a href="contact.html">Contact</a></li>
