--- a/marcos.html
+++ b/marcos.html
@@ -54,7 +54,7 @@
 					<div id="content" class="8u skel-cell-important">
 						<section>
 							<header>
-								<h2>Ferdinan E. Marcos</h2>
+								<h2>Ferdinand E. Marcos</h2>
 								
 							</header>
 							<img src="images/pic10.jpg" alt="" />
