--- a/aftermath.html
+++ b/aftermath.html
@@ -78,6 +78,8 @@ During the first years of the Martial Law, the economy increased stability, and 
 							<br> <strong>Unemployment</strong>
 							
 							<p>             The unemployment rate rose from 5.2 percent to 5.9 percent from 1978 to 1983, while underemployment was an even larger problem, tripling, in the same time period, from 10.2 percent to 29.0 percent.</p>
+							<p> However, despite the awful memory of this administration, it is not a doubt that his regime brought a positive strobe light in the Philippines.  The Marcos regime has made our country into a disciplined one and has even placed the Philippines in the map. Additionally, the inner nationalism of the Filipinos eluded in a manner of protest against the abuses being done to their innocence.</p>
+							<p>When the Martial Law was implemented, the whole country became extremely disciplined. A notable change would be the implementation of the curfew at night. Just try to walk along the sidewalk past curfew time, and surely the police will tail you and give disciplinary actions. That is why once the curfew time starts, the streets of the Philippines can be comparable to Ghost Town. With this strict policy, crime rates totally went down the drain. This kind of discipline, although bad in its nature, has given Filipinos the opportunity to compare and contrast what it was before and what it is now. If people compare the kind of discipline the Filipinos experienced during the Marcos regime to the present, the big difference would be notable. Truth be told: Filipinos of today have become extremely undisciplined</p>
 
 							
 							<br> References:
