--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
 							<ul class="style">
 								<li>
 									<p class="posted"><a href="marcos.html">Ferdinand E. Marcos</a></p>
-									<a href="marcos.html"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="marcos.html"><img src="images/pic04.JPG" alt="" /></a>
 									<p class="text">Marcos was also undeniably smart that he was able to top the 1939 Bar Examinations with near-perfect score </p>
 								</li>
 								<li>
 									<p class="posted"><a href="martiallaw.html">Martial Law</a></p>
-									<a href="martiallaw.html"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="martiallaw.html"><img src="images/pic05.JPG" alt="" /></a>
 									<p class="text">On September 21, 1972, the Philippines was proclaimed under the state of Martial Law by former Pres. Ferdinand E. Marcos.</p>
 								</li>
 								<li>
 									<p class="posted"><a href="aftermath.html"> Aftermath </a></p>
-									<a href="aftermath.html"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="aftermath.html"><img src="images/pic06.JPG" alt="" /></a>
 									<p class="text">Police forces gained more privilege to exercise their position as security personnel and became more powerful. </p>
 								</li>
 							</ul>
@@ -98,19 +98,19 @@
 				<div class="row">
 					<div class="4u">
 						<h2>What Philippines was like after Martial Law?</h2>
-						<a href="aftermath.html" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="aftermath.html" class="image full"><img src="images/pic01.JPG" alt="" /></a>
 						<p>Approach any old Filipino citizen and interrogate him about Marcos regime. He probably may talk about the atrocities brought about by Marcos's reign, with all the abuses and deaths that dominated during his time. </p>
 						<p><a href="aftermath.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
 						<h2>Ferdinand Marcos: Youth and Family</h2>
-						<a href="marcos.html" class="image full"><img src="images/pic02.jpg" alt="" /></a>
+						<a href="marcos.html" class="image full"><img src="images/pic02.JPG" alt="" /></a>
 						<p>Although a substantial influence on Marcos’s life, Mariano was not his biological father. His actual father was a wealthy Chinese man named Ferdinand Chua whom he claims as his “godfather”. Chua was a man of numerous connections. </p>
 						<p><a href="marcos.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
 						<h2>Why did Martial Law happen?</h2>
-						<a href="martiallaw.html" class="image full"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="martiallaw.html" class="image full"><img src="images/pic03.JPG" alt="" /></a>
 						<p>Generally, according to the Philippine History Organization,  it was mainly to establish the country towards what they call a 'New Society'. The purpose of it is not to make military power overtook the people's rights but to protect the national government and the people governed by it against communism.</p>
 						<p><a href="martiallaw.html" class="button">More Details</a></p>
 					</div>
