--- a/marcos.html
+++ b/marcos.html
@@ -57,21 +57,21 @@
 								<h2>Ferdinand E. Marcos</h2>
 								
 							</header>
-							<img src="images/pic10.jpg" alt="" />
+							<img src="images/pic10.JPG" alt="" />
 							<p><strong>Ferdinand Edralin Marcos</strong>, most commonly known as Ferdinand Marcos was a Philippine lawyer and politician, who as head of state from 1966 to 1986, initiated an autocratic administration in the Philippines that garnered loads of opprobrium for payola and for its repression of egalitarian procedures. </p>
 						<br> <strong>Youth and Family</strong>
-							<img src="images/pic08.jpg">
+							<img src="images/pic08.JPG">
 							<p>On September 11, 1917, Ferdinand Edralin Marcos was born in Sarrat - a village in the Northern Ilocos region of the island of Luzon in the Philippines. His parents, both teachers from notable families were Josefa Edralin and Mariano Marcos. Marcos was exposed to the political atmosphere at a young age when his father, Mariano Marcos decided to become a congressman in 1925. Not only did Mariano and Josefa coerce Ferdinand to excel in his studies at school, they also wanted him to be preeminent in activities such as wrestling, boxing, hunting, survival skills and marksmanship.</p>
 						 <p>Although a substantial influence on Marcos’s life, Mariano was not his biological father. His actual father was a wealthy Chinese man named Ferdinand Chua whom he claims as his “godfather”. Chua was a man of numerous connections. He paid for the young Marcos’s schooling and later on managed to sway the Philippine Supreme Court to rescind the latter’s conviction for murder.</p>
 						 <p> Julio Nalundasan was in his own abode, celebrating his congressional election triumph over Mariano Marcos when he was injured and later on died with a .22-caliber bullet filed by eighteen-year-old Ferdinand Marcos. Subsequently, he was imprisoned three years later for Nalundasan’s assassination. After graduating a year later, he was found guilty of the crime. He spent six months in jail, composing his own supplication for a new trial. In 1940, the supreme Court eventually took up Marcos’s plea. The judge (seemingly influenced by Judge Chua) threw out the case. The day after that, Marcos went back to the Supreme Court and took the oath to become a lawyer. </p>
 							<br> <strong>Education</strong>
-				<img src="images/pic09.jpg">
+				<img src="images/pic09.JPG">
 							<p>
 Ferdinand Marcos was educated in Manila, acquired his high school diploma at the age of 15 years old in UP High School batch 1933. He was distinguished as “Ferdi” by his fellow classmates and was remembered “for having a simple demeanor, interested in debates and discussions in which he outshone all.” </p>
 							<p> Marcos was also undeniably smart that he was able to top the 1939 Bar Examinations with near-perfect score regardless  of the fact that he was imprisoned for shooting and killing Julio Nalundasan - a political rival of his father. Additionally, he was accused of cheating because of how he was able to ace the exam in an unimaginable feat.
 Several people attested his incredible memory, including the late Senator Miriam Santiago. <p>
 							<br> <strong>Marriage</strong>
-							<img src="images/pic11.jpg">
+							<img src="images/pic11.JPG">
 							<p> When Marcos first met Imelda Romualdez in 1954, it was love at first sight. So after two weeks of romance, the pair decided to tie the knot first in a civil wedding in Baguio City which was followed by a church wedding at the Pro Cathedral of San Miguel in Manila.</p>
 
 <p>For this to be possible, Imelda had to convince Marcos to convert from his original Aglipayan religion to Roman Catholicism. She triumphed in convincing the latter and the church wedding was held afterwards with President Ramon Magsaysay as their principal sponsor. 
@@ -104,17 +104,17 @@ Marcos was reelected twice, and in 1959, he was elected to the Philippine Senate
 							<ul class="style">
 								<li>
 									<p class="posted"><a href="martiallaw.html">Ferdinand E. Marcos</a></p>
-									<a href="marcos.html"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="marcos.html"><img src="images/pic06.JPG" alt="" /></a>
 									<p class="text">Martial Law was verified under Proclamation No. 1081, confirming the rule of military authority over the civilians in the country. </p>
 								</li>
 								<li>
 									<p class="posted"><a href="martiallaw.html">Martial Law</a></p>
-									<a href="martiallaw.html"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="martiallaw.html"><img src="images/pic05.JPG" alt="" /></a>
 									<p class="text">On September 21, 1972, the Philippines was proclaimed under the state of Martial Law by former Pres. Ferdinand E. Marcos.</p>
 								</li>
 								<li>
 									<p class="posted"><a href="aftermath.html"> Aftermath </a></p>
-									<a href="aftermath.html"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="aftermath.html"><img src="images/pic06.JPG" alt="" /></a>
 									<p class="text">Police forces gained more privilege to exercise their position as security personnel and became more powerful. </p>
 								</li>
 							</ul>
@@ -130,13 +130,13 @@ Marcos was reelected twice, and in 1959, he was elected to the Philippine Senate
 				<div class="row">
 					<div class="4u">
 						<h2>What Philippines was like after Martial Law?</h2>
-						<a href="aftermath.html" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="aftermath.html" class="image full"><img src="images/pic01.JPG" alt="" /></a>
 						<p>Approach any old Filipino citizen and interrogate him about Marcos regime. He probably may talk about the atrocities brought about by Marcos's reign, with all the abuses and deaths that dominated during his time. </p>
 						<p><a href="aftermath.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
 						<h2>Why did Martial Law happen?</h2>
-						<a href="martiallaw.html" class="image full"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="martiallaw.html" class="image full"><img src="images/pic03.JPG" alt="" /></a>
 						<p>Generally, according to the Philippine History Organization,  it was mainly to establish the country towards what they call a 'New Society'. The purpose of it is not to make military power overtook the people's rights but to protect the national government and the people governed by it against communism.</p>
 						<p><a href="martiallaw.html" class="button">More Details</a></p>
 					</div>
