--- a/martiallaw.html
+++ b/martiallaw.html
@@ -57,7 +57,7 @@
 								<h2>Martial Law</h2>
 								
 							</header>
-							<img src="images/pic03.jpg" alt="" />
+							<img src="images/pic03.JPG" alt="" />
 							<p>On September 21, 1972, the Philippines was proclaimed under the state of Martial Law by former President Ferdinand E. Marcos. Martial Law was verified under Proclamation No. 1081, confirming the rule of military authority over the civilians in the country. </p>
 						<br> <strong>When did it ended?</strong>
 							
@@ -82,13 +82,13 @@ Generally, according to the Philippine History Organization,  it was mainly to e
 				<div class="row">
 					<div class="4u">
 						<h2>What Philippines was like after Martial Law?</h2>
-						<a href="aftermath.html" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="aftermath.html" class="image full"><img src="images/pic01.JPG" alt="" /></a>
 						<p>Approach any old Filipino citizen and interrogate him about Marcos regime. He probably may talk about the atrocities brought about by Marcos's reign, with all the abuses and deaths that dominated during his time. </p>
 						<p><a href="aftermath.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
 						<h2>Why did Martial Law happen?</h2>
-						<a href="martiallaw.html" class="image full"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="martiallaw.html" class="image full"><img src="images/pic03.JPG" alt="" /></a>
 						<p>Generally, according to the Philippine History Organization,  it was mainly to establish the country towards what they call a 'New Society'. The purpose of it is not to make military power overtook the people's rights but to protect the national government and the people governed by it against communism.</p>
 						<p><a href="martiallaw.html" class="button">More Details</a></p>
 					</div>
