--- a/aftermath.html
+++ b/aftermath.html
@@ -57,15 +57,15 @@
 								<h2>What Philippines was like after Martial Law</h2>
 								
 							</header>
-							<img src="images/pic01.jpg" alt="" />
+							<img src="images/pic01.JPG" alt="" />
 							<p>Martial Law is referred as the imposition of a leader, which is usually the head of the government, or the military governor. This means that the leader has the power to remove or cease all the powers in the branches of the government. Declaration of Martial law can be either temporary or permanent, depending on the circumstances. Here are some of the negative effects of the 1972 Martial Law:
 								<br> <strong>Police Power</strong>
-							<img src="images/pic12.jpg">
+							<img src="images/pic12.JPG">
 
 							<p>Police forces gained more privilege to exercise their position as security personnel. During this period, they became more powerful. However, instead of using it for good cause, most abused their powers for their own good . Some of them catch others according to their interests. 
 </p>
 							<br> <strong> Human Rights </strong>
-							<img src="images/pic13.jpg">
+							<img src="images/pic13.JPG">
 						 <p>Many Filipinos were robbed of their rights.  There were many mass protest with response to human rights abuse, which further degrades both political and economic situation of the society. About 70,000 people were imprisoned and 34,000 tortured, while 3,240 were killed from 1972 to 1981. Many experienced different forms of  torture methods. Prisoners, some who were innocent,  were electrocuted, beaten up, and strangled. They were burned with a flat iron or cigars. Water was poured down their throats, then forced out by beating. 
 
 </p>
@@ -102,13 +102,13 @@ During the first years of the Martial Law, the economy increased stability, and 
 				<div class="row">
 					<div class="4u">
 						<h2>What Philippines was like after Martial Law?</h2>
-						<a href="aftermath.html" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+						<a href="aftermath.html" class="image full"><img src="images/pic01.JPG" alt="" /></a>
 						<p>Approach any old Filipino citizen and interrogate him about Marcos regime. He probably may talk about the atrocities brought about by Marcos's reign, with all the abuses and deaths that dominated during his time. </p>
 						<p><a href="aftermath.html" class="button">More Details</a></p>
 					</div>
 					<div class="4u">
 						<h2>Why did Martial Law happen?</h2>
-						<a href="martiallaw.html" class="image full"><img src="images/pic03.jpg" alt="" /></a>
+						<a href="martiallaw.html" class="image full"><img src="images/pic03.JPG" alt="" /></a>
 						<p>Generally, according to the Philippine History Organization,  it was mainly to establish the country towards what they call a 'New Society'. The purpose of it is not to make military power overtook the people's rights but to protect the national government and the people governed by it against communism.</p>
 						<p><a href="martiallaw.html" class="button">More Details</a></p>
 					</div>
