--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
 							<ul class="style">
 								<li>
 									<p class="posted"><a href="marcos.html">Ferdinand E. Marcos</a></p>
-									<a href="marcos.html"><img src="images/pic04.JPG" alt="" /></a>
+									<a href="marcos.html"><img src="images/pic04.JPG" width="50" height="50" /></a>
 									<p class="text">Marcos was also undeniably smart that he was able to top the 1939 Bar Examinations with near-perfect score </p>
 								</li>
 								<li>
 									<p class="posted"><a href="martiallaw.html">Martial Law</a></p>
-									<a href="martiallaw.html"><img src="images/pic05.JPG" alt="" /></a>
+									<a href="martiallaw.html"><img src="images/pic05.JPG" width="50" height="50" /></a>
 									<p class="text">On September 21, 1972, the Philippines was proclaimed under the state of Martial Law by former Pres. Ferdinand E. Marcos.</p>
 								</li>
 								<li>
 									<p class="posted"><a href="aftermath.html"> Aftermath </a></p>
-									<a href="aftermath.html"><img src="images/pic06.JPG" alt="" /></a>
+									<a href="aftermath.html"><img src="images/pic06.JPG" width="50" height="50"
 									<p class="text">Police forces gained more privilege to exercise their position as security personnel and became more powerful. </p>
 								</li>
 							</ul>
